<resources>

    <string name="app_name">FolioReader</string>

    <string name="andada">Andada</string>
    <string name="lato">Lato</string>
    <string name="lora">Lora</string>
    <string name="raleway">Raleway</string>

    <string name="andada_font">fonts/andada/Andada-Regular.otf</string>
    <string name="lato_font">fonts/lato/Lato-Regular.ttf</string>
    <string name="lora_font">fonts/lora/Lora-Regular.ttf</string>
    <string name="raleway_font">fonts/raleway/Raleway-Regular.ttf</string>

    <string name="minutes_left">%1$d minutes ·&#160;</string>
    <string name="minute_left">%1$d minute ·&#160;</string>
    <string name="less_than_minute">Less than a minute ·&#160;</string>

    <string name="copied">Copied</string>
    <string name="send_to">Send to</string>

    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="define">Define</string>
    <string name="highlight">Highlight</string>

    <string name="pages_left">%1$d pages left</string>
    <string name="page_left">%1$d page left</string>
    <string name="highlights">Highlights</string>
    <string name="half_speed">1/2x</string>
    <string name="onex">1x</string>
    <string name="one_and_half">1&#160;1/2x</string>
    <string name="two_x">2x</string>
    <string name="style">Style</string>
    <string name="style_underline">
        <![CDATA[<u style=\" border-bottom: 1px dashed #bcbcbc;   text-decoration: none;\">Style</u>]]></string>
    <string name="full_path">full-path</string>
    <string name="error_goToPage">goToPage error:</string>
    <string name="zip">.zip</string>
    <string name="htmlBodyTableOpen">&lt;html&gt;&lt;body&gt;&lt;table&gt;</string>
    <string name="titlesMeta">&lt;tr&gt;&lt;td&gt;Titles:&lt;/td&gt;</string>
    <string name="authorsMeta">&lt;tr&gt;&lt;td&gt;Authors:&lt;/td&gt;</string>
    <string name="contributorsMeta">&lt;tr&gt;&lt;td&gt;Contributors:&lt;/td&gt;</string>
    <string name="languageMeta">&lt;tr&gt;&lt;td&gt;Language:&lt;/td&gt;&lt;td&gt;</string>
    <string name="publishersMeta">&lt;tr&gt;&lt;td&gt;Publishers:&lt;/td&gt;</string>
    <string name="typesMeta">&lt;tr&gt;&lt;td&gt;Types:&lt;/td&gt;</string>
    <string name="descriptionsMeta">&lt;tr&gt;&lt;td&gt;Descriptions:&lt;/td&gt;</string>
    <string name="rightsMeta">&lt;tr&gt;&lt;td&gt;Rights:&lt;/td&gt;</string>
    <string name="tablebodyhtmlClose">&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
    <string name="tocReference">&lt;tr&gt;&lt;td&gt;Table of Contents:&lt;/td&gt;</string>
    <string name="change_Font">Change Font</string>
    <string name="change_Font_Color">Font Color:</string>
    <string name="changeStyle">Change Style</string>
    <string name="blue_rgb">#0000ff</string>
    <string name="red_rgb">#ff0000</string>
    <string name="green_rgb">#00ff00</string>
    <string name="black_rgb">#000000</string>
    <string name="white_rgb">#ffffff</string>
    <string name="error_CannotChangeStyle">Cannot Change Style!</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="SetSizeTitle">Upper Panel Size:</string>
    <string name="LanguageChooserTitle">Choose two languages:</string>
    <string name="parallelTextBool">parallelTextBool</string>
    <string name="loading">Loading</string>
    <string name="please_wait">please wait...</string>
    <string name="one_and_half_speed"><![CDATA[1<sup>1</sup>/<sub>2</sub>x]]></string>
    <string name="half_speed_text"><![CDATA[<sup>1</sup>/<sub>2</sub>x]]></string>
    <string name="please_wait_till_audio_is_parsed">please wait till audio is been parsed, Retry after some time
    </string>
    <string name="audio_mark_id">javascript:alert(audioMarkID(\'epub-media-overlay-playing\',\'%s\'))</string>
    <string name="setmediaoverlaystyle">javascript:setMediaOverlayStyle(\'%s\')</string>
    <string name="go_to_anchor" translatable="false">javascript:goToAnchor(\'%s\')</string>
    <string name="go_to_highlight" translatable="false">javascript:goToHighlight(\'%s\')</string>
    <string name="sethighlightstyle">javascript:setHighlightStyle(\'%s\');</string>
    <string name="css_tag"><![CDATA[<link rel=\"stylesheet\" type=\"text/css\" href=\"%s\" />]]></string>
    <string name="script_tag"><![CDATA[<script type=\"text/javascript\" src=\"%s\"></script>]]></string>
    <string name="td_tag"><![CDATA[<td>%s</td></tr>]]></string>
    <string name="tr_tag"><![CDATA[<tr><td></td><td>%s</td></tr>]]></string>
    <string name="script_tag_method_call"><![CDATA[<script type=\"text/javascript\">%s</script>]]></string>
    <string name="underline_highlights">
        <span style="border-bottom: 1px solid #ff0000;">%s</span>
    </string>
    <string name="edit_notes">Save your note</string>
    <string name="save_note">Save note</string>
    <string name="please_enter_note">please enter a note</string>
    <string name="contents">Contents</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="debug_start_drag">Starting drag!</string>
    <string name="debug_start_unable_drag">Starting unable to drag!</string>
    <string name="dictionary">Dictionary</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="cannot_access_epub_message">Cannot open epub it needs storage access !</string>
    <string name="direction_horizontal">Horizontal</string>
    <string name="direction_vertical">Vertical</string>

    <string name="xhtml_mime_type" translatable="false">application/xhtml+xml</string>
    <string name="html_mime_type" translatable="false">text/html</string>

    <string name="menu_item_search">Search</string>
    <string name="menu_item_config">Configuration</string>
    <string name="menu_item_tts">Text To Speech</string>

    <string name="search_hint">Search In Book</string>
    <string name="search_empty_text">No results.</string>
    <string name="search_failure_text">Something wen\'t wrong.</string>

    <plurals name="numberOfSearchResults">
        <item quantity="one">%d result</item>
        <item quantity="other">%d results</item>
    </plurals>

    <!-- JS Calls -->
    <string name="callComputeLastReadCfi" translatable="false">javascript:computeLastReadCfi()</string>
    <string name="callComputeCurrentReadCfi">javascript:computeCurrentReadCfi()</string>
    <string name="callScrollToCfi" translatable="false">javascript:scrollToCfi(\"%s\")</string>
    <string name="callHighlightSearchLocator" translatable="false">javascript:highlightSearchLocator(\"%s\")</string>
    <string name="callClearSelection" translatable="false">javascript:clearSelection()</string>
    <!--ca-app-pub-4586982117024368/7025480412-->
    <string name="banner_ads_id">ca-app-pub-3940256099942544/6300978111</string>
    <!--ca-app-pub-4586982117024368/4175955790-->
    <string name="inter_ads_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="menu_item_more">Đọc truyện khác</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_bookmark_list">Bookmarks</string>
    <string name="cancel">Hủy</string>
    <string name="ok">ok</string>
    <string name="add_to_bookmark">Thêm vào Bookmark</string>
    <string name="add_title">Nhập tiêu đề</string>
    <string name="title_toolbar_bookmark">Danh sách Bookmark</string>
    <string name="delete_book_mark">Xóa bookmark này</string>
    <string name="this_action_cannot_be_undo">Sau khi xóa bạn không thể khôi phục</string>
    <string name="delete">xóa</string>
    <string name="update_bookmark">Thay đổi bookmark</string>
    <string name="add_new_title">Nhập tiêu đề mới</string>
    <string name="txt_must_type_title">Bạn phải nhập tiêu đề</string>
    <string name="txt_must_type_new_title">Bạn phải nhập tiêu đề mới</string>
    <string name="no_bookmark_save">Không có mục nào được lưu</string>
    <string name="toast_need_permission">Bạn cần cấp quyền để sử dụng ứng dụng</string>
    <string name="search_in_story">Tìm trong truyện</string>
    <string name="muc_luc">Mục lục</string>

</resources>
