<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/view_corner"
    android:padding="@dimen/normal_padding">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_book_mark"
        android:textAllCaps="true"
        android:textColor="@color/blue_color"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/this_action_cannot_be_undo"
        android:textColor="@color/colorGray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/normal_margin"
        android:background="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/blue_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnDelete"
        app:layout_constraintRight_toLeftOf="@id/btnDelete"
        app:layout_constraintTop_toTopOf="@id/btnDelete" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/delete"
        android:textColor="@color/blue_color"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>